[SPR-99] feat: route create 수정, 불필요 import 제거